[package]
name = "actress"
version = "0.1.0"
authors = ["Mikael Silvén <mikael@silven.nu>"]
edition = "2018"

[dependencies]
mopa = "0.2"
tokio-sync = { version = "0.2", git = "https://github.com/tokio-rs/tokio", features=["async-traits"]}
tokio-threadpool = { version = "0.2", git = "https://github.com/tokio-rs/tokio" }
futures-preview = "=0.3.0-alpha.16"
crossbeam = "0.7"

[features]
default = ["peek"]

peek = []
