[package]
name = "actress"
version = "0.1.0"
authors = ["Mikael Silvén <mikael@silven.nu>"]
edition = "2018"

[dependencies]
mopa = "0.2"
futures-preview = "=0.3.0-alpha.16"
crossbeam = "0.7"
tokio-sync = { version = "0.2", git = "https://github.com/tokio-rs/tokio", features=["async-traits"]}
tokio-threadpool = { version = "0.2", git = "https://github.com/tokio-rs/tokio" }
tokio-tcp = { version = "0.2", git = "https://github.com/tokio-rs/tokio", features=["incoming"] }
tokio-io = { version = "0.2", git = "https://github.com/tokio-rs/tokio" }
tokio = { version = "0.2", git = "https://github.com/tokio-rs/tokio" }
hyper = { branch = "std-future", git = "https://github.com/hyperium/hyper" }


[features]
default = ["peek"]

peek = []
