[package]
name = "actress"
version = "0.1.0"
authors = ["Mikael Silvén <mikael@silven.nu>"]
edition = "2018"

[dependencies]
mopa = "0.2"
futures-preview = "^0.3.0-alpha.18"
crossbeam = "0.7"
tokio-sync = { version = "0.2.0-alpha.4", features=["async-traits"]}
#tokio-threadpool = { branch="switch-default-rt", version = "0.2", git = "https://github.com/tokio-rs/tokio" }
#tokio-tcp = { version = "0.2", git = "https://github.com/tokio-rs/tokio", features=["incoming"] }
tokio-io = { version = "0.2.0-alpha.4" }
tokio = { version = "0.2.0-alpha.4" }
hyper = { git = "https://github.com/hyperium/hyper" }
headers = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["actress_peek", "signals"]

actress_peek = []
signals = []

